--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,7 +1,12 @@
 @font-face {
-    font-family: 'Marquis Serif';
-    src: url('./Marquis-Serif.otf') format('opentype'),
-         url('./Marquis-Serif.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+    font-family: 'Marquis-regular';
+    src: url(../fonts/Marquis/Marquis\ Sans\ Regular.otf);
+}
+@font-face {
+    font-family: 'Marquis-bold';
+    src: url(../fonts/Marquis/Marquis\ Serif\ Bold.otf);
+}
+@font-face {
+    font-family: 'Marquis-italic';
+    src: url(../fonts/Marquis/Marquis\ Sans\ Italic.otf);
 }
